--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,19 +6,5 @@
     "password": "123456",
     "database": "myblog",
     "synchronize": true,
-    "logging": false,
-    "entities": [
-       "src/entity/**/*.ts"
-    ],
-    "migrations": [
-       "src/migration/**/*.ts"
-    ],
-    "subscribers": [
-       "src/subscriber/**/*.ts"
-    ],
-    "cli": {
-       "entitiesDir": "src/entity",
-       "migrationsDir": "src/migration",
-       "subscribersDir": "src/subscriber"
-    }
+    "logging": false
  }
