--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
     "@nestjs/platform-express": "^6.10.14",
+    "@nestjs/serve-static": "^2.1.0",
     "@nestjs/typeorm": "^7.0.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
