--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/serve-static": "^2.1.0",
     "@nestjs/typeorm": "^7.0.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
@@ -37,6 +40,7 @@
     "@nestjs/schematics": "^6.8.1",
     "@nestjs/testing": "^6.10.14",
     "@types/express": "^4.17.2",
+    "@types/hapi__joi": "^16.0.12",
     "@types/jest": "25.1.2",
     "@types/node": "^13.1.6",
     "@types/supertest": "^2.0.8",
